# ros2_epick_gripper

./: .env  .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: ci-coverage-build.yml  ci-ros-lint.yml  industrial_ci.yml  industrial_ci_action.yml
docs/: class_diagram.uxf
epick_bringup/: CMakeLists.txt  package.xml
epick_bringup/.cmake/api/v1/reply/: cache-v2-5fd39d026a0e4149225d.json  cmakeFiles-v1-21b539d2f651ffda3d1a.json  codemodel-v2-c50f297c74e8a8701b8e.json  directory-.-Debug-18041210d3b69819af33.json  index-2023-08-23T11-26-42-0882.json  target-epick_bringup_uninstall-Debug-044979763573ea95b2e0.json  target-uninstall-Debug-f3066422f00ddfd7b187.json
epick_bringup/config/: controllers.yaml
epick_bringup/launch/: epick_bringup.launch.py
epick_bringup/urdf/: epick_ros2_control.xacro  minimal_robot.xacro  urdf.xacro
epick_controllers/: CMakeLists.txt  controller_plugins.xml  package.xml
epick_controllers/include/epick_controllers/: epick_controller.hpp  epick_gripper_action_controller.hpp  epick_status_publisher_controller.hpp
epick_controllers/src/: epick_controller.cpp  epick_gripper_action_controller.cpp  epick_status_publisher_controller.cpp
epick_description/: CMakeLists.txt  package.xml
epick_description/config/: controllers.yaml
epick_description/launch/: epick_gripper.launch.py
epick_description/meshes/visual/: epick_body.stl
epick_description/urdf/: epick_body.xacro  epick_driver_ros2_control.xacro  epick_gripper_ros2_control.xacro  epick_macro.xacro  epick_single_suction_cup.xacro  example.urdf.xacro  helper_macros.xacro
epick_driver/: CMakeLists.txt  hardware_interface_plugin.xml  package.xml
epick_driver/include/epick_driver/: command_interface.hpp  command_interface_factory.hpp  crc_utils.hpp  data_utils.hpp  default_command_interface.hpp  default_command_interface_factory.hpp  default_driver.hpp  default_driver_factory.hpp  default_driver_utils.hpp  default_serial.hpp  default_serial_factory.hpp  default_serial_interface.hpp  driver.hpp  driver_exception.hpp  driver_factory.hpp  driver_utils.hpp  epick_gripper_hardware_interface.hpp  hardware_interface_utils.hpp  serial.hpp  serial_factory.hpp  serial_interface.hpp  visibility_control.hpp
epick_driver/include/epick_driver/fake/: fake_driver.hpp
epick_driver/src/: crc_utils.cpp  data_utils.cpp  default_command_interface.cpp  default_command_interface_factory.cpp  default_driver.cpp  default_driver_factory.cpp  default_driver_utils.cpp  default_serial.cpp  default_serial_factory.cpp  default_serial_interface.cpp  driver_utils.cpp  epick_gripper_hardware_interface.cpp  hardware_interface_utils.cpp
epick_driver/src/fake/: fake_driver.cpp
epick_driver/tests/: CMakeLists.txt  test_data_utils.cpp  test_default_command_interface.cpp  test_default_driver.cpp  test_default_driver_factory.cpp  test_default_serial_factory.cpp  test_epick_gripper_hardware_interface.cpp
epick_driver/tests/fake/: fake_driver.hpp
epick_driver/tests/mock/: mock_driver.hpp  mock_driver_factory.hpp  mock_serial.hpp  mock_serial_interface.hpp
epick_driver/urdf/: test.urdf
epick_driver_bringup/: CMakeLists.txt  package.xml
epick_driver_bringup/launch/: epick_driver.launch.py
epick_hardware_tests/: CMakeLists.txt  README.md  package.xml
epick_hardware_tests/src/: activate.cpp  activate_test.cpp  break.cpp  command_line_utility.cpp  command_line_utility.hpp  connection_test.cpp  connection_test.py  deactivate.cpp  get_status.cpp  get_status_test.cpp  grip.cpp  read_input_register_test.cpp  release.cpp  set_max_vacuum_pressure.cpp  set_relative_pressure.cpp
epick_hardware_tests/tests/: CMakeLists.txt  test_default_command_interface.cpp  test_utils.hpp
epick_moveit_plugin/: CMakeLists.txt  moveit_ros_control_interface_plugins.xml  package.xml
epick_moveit_plugin/src/: epick_gripper_controller_allocator.cpp
epick_moveit_studio/: CMakeLists.txt  behavior_plugin_description.xml  package.xml
epick_moveit_studio/config/: tree_nodes_model.xml
epick_moveit_studio/include/epick_moveit_studio/: compare_epick_object_detection_status.hpp  get_epick_object_detection_status.hpp
epick_moveit_studio/src/: behavior_loader.cpp  compare_epick_object_detection_status.cpp  get_epick_object_detection_status.cpp
epick_moveit_studio/test/: CMakeLists.txt  test_compare_epick_object_detection_status.cpp  test_load_behaviors.cpp
epick_msgs/: CMakeLists.txt  package.xml
epick_msgs/msg/: ObjectDetectionStatus.msg
robotiq_controllers/: CMakeLists.txt  controller_plugins.xml  package.xml
robotiq_controllers/include/robotiq_controllers/: epick_controller.hpp
robotiq_controllers/src/: epick_controller.cpp
