<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>epick_moveit_plugin</name>
  <version>0.0.1</version>
  <description>Controllers for the Robotiq Epick gripper.</description>
  <maintainer email="giovanni.remigi@picknik.ai">Giovanni Remigi</maintainer>
  <license>BSD-3-Clause</license>
  <author>Giovanni Remigi</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_ros_control_interface</depend>
  <depend>moveit_simple_controller_manager</depend>
  <depend>pluginlib</depend>

  <exec_depend>epick_controllers</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
