find_package(ament_cmake_gmock REQUIRED)
find_package(ament_cmake_gtest REQUIRED)

ament_add_gtest(test_load_behaviors
  test_load_behaviors.cpp
)
ament_target_dependencies(test_load_behaviors moveit_studio_behavior_interface pluginlib)
target_link_libraries(test_load_behaviors moveit_studio_behavior_interface::shared_resources_node)

ament_add_gmock(test_compare_epick_object_detection_status test_compare_epick_object_detection_status.cpp)
target_link_libraries(test_compare_epick_object_detection_status epick_behaviors)
